[gd_scene load_steps=4 format=3 uid="uid://73qvg2vbt0y5"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_xywy8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8mir"]
size = Vector2(22, 24)

[sub_resource type="LabelSettings" id="LabelSettings_wiq3u"]
font_size = 25
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Card" type="Area2D" groups=["card"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_xywy8")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-60, -55)
scale = Vector2(0.555089, 0.476589)
color = Color(1, 1, 1, 0.196078)
polygon = PackedVector2Array(48.6408, 39.8666, 48.6408, 190.94, 167.541, 190.94, 167.541, 39.8666)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_l8mir")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -6)
scale = Vector2(0.205418, 0.205418)

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = -20.0
offset_top = 13.0
offset_right = 20.0
offset_bottom = 48.0
text = "0"
label_settings = SubResource("LabelSettings_wiq3u")
horizontal_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
